--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+@keyframes marquee {
+  from {
+      transform: translateX(0);
+  }
+  to {
+      transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  display: flex;
+  animation: marquee 30s linear infinite;
+  min-width: 200%; /* Ensures smooth looping */
+}
